# async-rest-odoo

./: Cargo.toml  README.md
src/: main.rs  odoo.rs
src/views/: products.rs
