[package]
name = "async-rest-odoo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.73" }
serde_with = "2.0.1"
async_odoors = "1.0.0"
axum = "0.5.16"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
